--- a/resume.html
+++ b/resume.html
@@ -50,6 +50,7 @@
       development.
       </ul> 
       <p>More information can be found at <a href="https://github.com/tjshivu/" target="_blank">my github link</a>.</p>
+      
       <!-- //  EDUCATION & CERTIFICATIONS  // -->
       <section class="resume-section">
         <!-- Start content edits below this line.  -->
@@ -61,12 +62,13 @@
           <p>Master Of Computer Applications.</p>
           <p>2024 - Present</p>
         </section>
-  
+
         <section class="education-item">
           <h2>Graduation</h2>
           <h3>Sree Siddaganga Collgee of Arts Science And Commerce - Tumkur, Karnataka.</h3>
           <p>Bachelor Of Computer Applications</p>
           <p>2020 - 2023</p>
+        </section>
         </section>
         <section class="resume-section">
           <h2>Internship</h2>
