--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="resume">
-    <a class="btn download-link" href="./resume/shivu_tj_resume.pdf" download>Download PDF</a>
+    <a class="btn download-link" href="./Resume/shivu_tj_resume.pdf" download>Download PDF</a>
     <!-- //  INTRO  // -->
     <header>  
       <div class="content-wrapper">
